# comparemania-crawler

./: README.md  pyproject.toml
comparemania_crawler/: main.py
comparemania_crawler/data/: dataset-comparemania-2024-04-08.csv  dataset-comparemania-2024-04-09.csv  dataset-comparemania-2024-04-10.csv  dataset-comparemania-2024-04-11.csv  dataset-comparemania-2024-04-12.csv  dataset-comparemania-2024-04-15.csv  dataset-comparemania-2024-04-16.csv  dataset-comparemania-2024-04-17.csv
